if(DEFINED_IN_SOURCE_BUILD)
	set(LLVM_LINK_COMPONENTS BitWriter Core IPO IRReader InstCombine Instrumentation Target Linker Analysis ScalarOpts Support Svf Cudd)
	add_llvm_tool( skeleton skeleton.cpp )
else()
	llvm_map_components_to_libnames(llvm_libs BitWriter Core IPO IRReader InstCombine Instrumentation Target Linker Analysis ScalarOpts Support)
	add_executable( skeleton skeleton.cpp )
	target_link_libraries( skeleton LLVMSvf LLVMCudd ${llvm_libs} )
	set_target_properties( skeleton PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
endif()
